tests/invalid/lambda_contextual_return_mismatch.wio
fn Entry() -> i32 {
    let reducer: fn(i32, i32) -> i32 = (acc, value) => {
        return true;
    };

    return 0;
}
